--- a/.insomnia/Request/req_73d20c6cd817411e83fc810f9889a29f.yml
+++ b/.insomnia/Request/req_73d20c6cd817411e83fc810f9889a29f.yml
@@ -1,10 +1,10 @@
 _id: req_73d20c6cd817411e83fc810f9889a29f
 type: Request
 parentId: fld_6dd2c03a1d53482c9fdd174134654e50
-modified: 1684985504673
+modified: 1685466256776
 created: 1684985267484
 url: "{{ _.domain }}/api/admin/V1/brand/{{ _.brandID }}/earn-for-purchase"
-name: list - no filter
+name: efp - list - no filter
 description: ""
 method: GET
 body: {}
