--- a/.insomnia/Request/req_7988a2791e3644dfb9fc2807db8d4745.yml
+++ b/.insomnia/Request/req_7988a2791e3644dfb9fc2807db8d4745.yml
@@ -1,23 +1,15 @@
-_id: req_964d9c3afc494a6bb44f896c197abf37
+_id: req_7988a2791e3644dfb9fc2807db8d4745
 type: Request
 parentId: fld_a279c1b1c15942a89219609823242f4f
-modified: 1685466525835
-created: 1685024021113
-url: "{{ _.domain }}/api/V1/brand/{{ _.brandID }}/customer"
-name: customer - list - filter
+modified: 1685466573355
+created: 1685466567699
+url: "{{ _.domain }}/api/V1/brand/{{ _.brandID
+  }}/customer/01H19M97XCZ4DZA1J51PE4V1A4"
+name: customer - delete
 description: ""
-method: GET
+method: DELETE
 body: {}
-parameters:
-  - name: limit
-    value: "10"
-  - name: offset
-    value: "0"
-  - name: filters
-    value: '{"fields":[{"field": "name","condition":"CONTAINS","value":"cus"}],"op":
-      "AND"}'
-  - name: sorting
-    value: '[{"field":"name","direction":"DESC"}]'
+parameters: []
 headers:
   - name: accept
     value: application/json
@@ -27,7 +19,7 @@ headers:
     value: "{{ _.apiKey }}"
     description: ""
 authentication: {}
-metaSortKey: -1684976308359.375
+metaSortKey: -1684976308309.375
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
