--- a/.insomnia/Request/req_92649a4781504e54bf3de49b6a0c23c1.yml
+++ b/.insomnia/Request/req_92649a4781504e54bf3de49b6a0c23c1.yml
@@ -1,18 +1,18 @@
 _id: req_92649a4781504e54bf3de49b6a0c23c1
 type: Request
 parentId: fld_a279c1b1c15942a89219609823242f4f
-modified: 1685024236933
+modified: 1685466496967
 created: 1685024021069
 url: "{{ _.domain }}/api/V1/brand/{{ _.brandID }}/customer"
-name: update
+name: customer - update
 description: ""
 method: PUT
 body:
   mimeType: application/json
   text: |-
     {
-    	"id": "01H19M97XCZ4DZA1J51PE4V1A4",
-      "name": "customer"
+    	"id": "01H1PRTHGR3XD6KA0K71DHGQQ5",
+      "email": "customer2@cultos.io"
     }
 parameters: []
 headers:
