--- a/.insomnia/Request/req_930f41ad8c5b41e587b9a4c881d74a27.yml
+++ b/.insomnia/Request/req_930f41ad8c5b41e587b9a4c881d74a27.yml
@@ -1,10 +1,10 @@
 _id: req_930f41ad8c5b41e587b9a4c881d74a27
 type: Request
 parentId: fld_a279c1b1c15942a89219609823242f4f
-modified: 1685024267481
+modified: 1685466521679
 created: 1685024021096
 url: "{{ _.domain }}/api/V1/brand/{{ _.brandID }}/customer"
-name: list - no filter
+name: customer - list - no filter
 description: ""
 method: GET
 body: {}
