--- a/.insomnia/Request/req_a9c944f55a974b0d840d0fccbd9cb160.yml
+++ b/.insomnia/Request/req_a9c944f55a974b0d840d0fccbd9cb160.yml
@@ -1,10 +1,10 @@
 _id: req_a9c944f55a974b0d840d0fccbd9cb160
 type: Request
 parentId: fld_be645c9c6adb4758a9acf7de6421f458
-modified: 1685023942390
+modified: 1685466317898
 created: 1684985562436
 url: "{{ _.domain }}/api/admin/V1/brand/{{ _.brandID }}/user"
-name: list - no filter
+name: user - list - no filter
 description: ""
 method: GET
 body: {}
