--- a/.insomnia/Request/req_c97d26acd15549338072d58a5d48a35f.yml
+++ b/.insomnia/Request/req_c97d26acd15549338072d58a5d48a35f.yml
@@ -1,10 +1,10 @@
 _id: req_c97d26acd15549338072d58a5d48a35f
 type: Request
 parentId: fld_6dd2c03a1d53482c9fdd174134654e50
-modified: 1685051083826
+modified: 1685466241575
 created: 1684985406630
 url: "{{ _.domain }}/api/admin/V1/brand/{{ _.brandID }}/earn-for-purchase"
-name: create
+name: efp - create
 description: ""
 method: POST
 body:
