--- a/.insomnia/Request/req_cccdec9f352f4354b4b6706dafa9606b.yml
+++ b/.insomnia/Request/req_cccdec9f352f4354b4b6706dafa9606b.yml
@@ -1,10 +1,10 @@
 _id: req_cccdec9f352f4354b4b6706dafa9606b
 type: Request
 parentId: fld_8e0989900e624f18b9ad0d9c238da97a
-modified: 1684985000256
+modified: 1685466200923
 created: 1684975020033
 url: "{{ _.domain }}/api/admin/V1/onboarding"
-name: Create
+name: onboarding - Create
 description: ""
 method: POST
 body:
